# path-extract

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: formatting.yml
src/path_extract/: __init__.py  cli.py
tests/: test_cli.py
