[project]
name = "path-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts",
    "polars",
    "ipykernel",
    "ipywidgets",
]

[project.scripts]
pathex = "path_extract:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
