[project]
name = "path-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts",
    "polars",
    "ipykernel",
    "ipywidgets",
    "marimo>=0.16.5",
    "mcp[cli]>=1.16.0",
    "dspy>=3.0.3",
    "python-dotenv>=1.1.1",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[project.scripts]
pathex = "path_extract:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
